# MPointers

./: .gitignore  .gitmodules  README.md  run_client.sh  run_server.sh  test_memory_manager.cpp  test_program
backend/: CMakeLists.txt
backend/MemoryManager/: GarbageCollector.cpp  GarbageCollector.h  MemoryBlock.cpp  MemoryBlock.h  MemoryDumper.cpp  MemoryDumper.h  MemoryManager.cpp  MemoryManager.h
backend/include/: memory_server.h
backend/src/: main.cpp  memory_server.cpp  src.csproj  src.http
backend/src/Properties/: launchSettings.json
client/: CMakeLists.txt  run_client.sh
client/include/: MPointer.h
client/src/: main.cpp
